fix: project expand overlap on mobile

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -433,7 +433,7 @@ ul {
 }
 
 .projects-container.fullView {
-  max-height: 5000px;
+  max-height: none;
   overflow: visible;
 
   &::after {
